--- a/actividades/src/package.json
+++ b/actividades/src/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "objeto_request",
+  "name": "actividades",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon ./app.js"
   },
   "keywords": [],
   "author": "",
