--- a/actividades/package.json
+++ b/actividades/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "type": "module",
+  "ignore": ["*.json"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.js"
