--- a/actividades/package.json
+++ b/actividades/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "app.js",
   "type": "module",
-  "ignore": ["*.json"],
+  "ignore": [
+    "*.json"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.js"
@@ -12,8 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "socket.io": "^4.7.2"
   },
-  "devDependencies": {},
   "description": ""
 }
